# OCML

./: .gitignore  CMakeLists.txt  README.md
defs/: .ocml_mat_defs.h.swp  ocml_mat_defs.h  ocml_vec_defs.h
examples/: .mats.c.swp  mats.c  vecs.c
include/: ocml_mats.h  ocml_vec2.h  ocml_vec3.h  ocml_vecs.h
src/: ocml_vec2.c  ocml_vec3.c  ocml_vecs.c
